Movie Poster visible in Main Activity

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,7 +12,8 @@
     <GridView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="@string/num_column"
-        android:id="@+id/grid_view"></GridView>
+        android:numColumns="auto_fit"
+        android:id="@+id/grid_view"
+        android:background="@color/fragment_background"></GridView>
 
 </FrameLayout>
