--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -3,8 +3,11 @@
 
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/grid_item"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:src="@drawable/ic_launcher"
-    android:contentDescription="@string/movie_poster">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:src="@drawable/no_image_available"
+    android:contentDescription="@string/movie_poster"
+    android:adjustViewBounds="true"
+    android:scaleType="fitXY" >
 
 </ImageView>
