--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="title_size">30sp</dimen>
     <dimen name="padding">15dp</dimen>
+    <dimen name="fav_button_size">30dp</dimen>
 </resources>
