--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,7 +3,10 @@
     <dimen name="activity_horizontal_margin">0dp</dimen>
     <dimen name="activity_vertical_margin">0dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="title_size">30sp</dimen>
-    <dimen name="padding">15dp</dimen>
+    <dimen name="title_size">18sp</dimen>
+    <!--<dimen name="padding">15dp</dimen>-->
+    <dimen name="padding">5dp</dimen>
+    <dimen name="movie_backdrop_height">200dp</dimen>
+    <dimen name="movie_poster_marginTop">170dp</dimen>
     <dimen name="fav_button_size">30dp</dimen>
 </resources>
