--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -28,7 +28,8 @@
         android:baselineAligned="false"
         android:divider="?android:attr/dividerHorizontal"
         android:orientation="horizontal"
-        tools:context="com.example.android.sunshine.app.MainActivity">
+        tools:context="com.example.android.sunshine.app.MainActivity"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <!--
         This layout is a two-pane layout for the Items master/detail flow.
@@ -40,7 +41,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            tools:layout="@android:layout/list_content" />
+            tools:layout="@android:layout/list_content"/>
 
         <FrameLayout
             android:id="@+id/fragment_detail_container"
